--- a/w1.html
+++ b/w1.html
@@ -1,38 +1,79 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
 		<title>Week One Tags</title>
+
+		<meta charset="utf-8">
+	
+		<link rel="stylesheet" type="text/css" href="style.css">
+
+
 	</head>
+	
 	<body>
+
+		<ul>
+				<li> <a href="index.html"> Home </a> </li>
+				<li> <a href="https://github.com/krtdude"> GitHub </a> </li>
+				<li> <a href="http://twitch.tv/krtdude"> Twitch Channel </a> </li>
+				<li> <a href="resume.html"> My Resume </a> </li>
+				<li> <a href="practice.html"> Practice Pages Here </a>
+
+					<ul>
+
+						<li> <a href="w1.html"> Week 1 </a> </li>
+
+					</ul>
+
+				</li>
+
+		</ul>
+		
 		<h1> Blurg Boop Beep </h1>
+
+		
 		<h2> Blurg Boop Beep </h2>
+		
 		<h3> Blurg Boop Beep </h3>
+		
 		<h4> Blurg Boop Beep </h4>
+		
 		<h5> Blurg Boop Beep </h5>
+		
 		<h6> Blurg Boop Beep </h6>
+	
 		<p>
 			Mizzenmast Nelsons folly rope's end nipperkin hang the jib aye gun square-rigged lee schooner. Swing the lead transom fire in the hole careen sutler tackle chandler barkadeer boom Nelsons folly. Mizzenmast keel loot dead men tell no tales weigh anchor Spanish Main capstan booty rum galleon.
 			Spanker draft aye nipperkin gangway rigging crow's nest long boat furl Corsair. Brethren of the Coast grog topmast bilge water lanyard provost Pieces of Eight grapple wherry yardarm. Smartly Blimey six pounders spike gabion pinnace Shiver me timbers crimp boatswain brigantine.
 			Scurvy hang the jib barkadeer rigging man-of-war jury mast trysail Pirate Round booty weigh anchor. Skysail run a shot across the bow draught cackle fruit pirate Arr knave list topmast take a 
 			caulk. Strike colors tackle salmagundi Privateer heave down ye furl booty parrel flogging.
+	
 		<ol>
+
 			<li> Swing the lead transom fire in the hole </li>
+
 				<ol>
+
 					<li> Swing the lead transom fire in the hole </li>
 					<li> Swing the lead transom fire in the hole </li>
 					<li> Swing the lead transom fire in the hole </li>
+
 				</ol>
+
 			<li> Swing the lead transom fire in the hole </li>
 			<li> Swing the lead transom fire in the hole </li>
+
 		</ol>
 
-
-
 		<ul>
+
 			<li> Swing the lead transom fire in the hole </li>
 			<li> Swing the lead transom fire in the hole </li>
 			<li> Swing the lead transom fire in the hole </li>
+
 		</ul>
+
 		<a href="https://www.reddit.com/r/all/"> Reddit's Front Page </a>
 
 
