--- a/index.html
+++ b/index.html
@@ -1,71 +1,40 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
 		<title> My Wesbite </title>
+	
+		<meta charset="utf-8">
+		
+		<link rel="stylesheet" type="text/css" href="style.css">
+
 	</head>
+	
 	<body>
+		
 		<h1> Marco Aleman </h1>
+		
 		<img src="images\profile.jpg"
 			alt="A very professional picture of myself"
-			title="A picture that was taken in front of the Sears Tower"
-		>
+			title="A picture that was taken in front of the Sears Tower">
+		
 		<ul>
+		
 			<li> <a href="index.html"> Home </a> </li>
 			<li> <a href="https://github.com/krtdude"> GitHub </a> </li>
 			<li> <a href="http://twitch.tv/krtdude"> Twitch Channel </a> </li>
 			<li> <a href="resume.html"> My Resume </a> </li>
-			<li> <a href="practice.html"> Practice Pages Here </a> </li>
-				<ul>
-					<li> <a href="w1.html"> Week 1 </a> </li>
-				</ul>
-		</ul>
-
+			<li> <a href="practice.html"> Practice Pages Here </a>
 		
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+				<ul>
+		
+					<li> <a href="w1.html"> Week 1 </a> </li>
+		
+				</ul>
+		
+			</li>
+		
+		</ul>
 
 	</body>
 </html>
