--- a/w1.html
+++ b/w1.html
@@ -8,27 +8,41 @@
 	
 		<link rel="stylesheet" type="text/css" href="style.css">
 
+		<link href="https://fonts.googleapis.com/css?family=Mirza" rel="stylesheet">
 
 	</head>
 	
 	<body>
 
-		<ul>
-				<li> <a href="index.html"> Home </a> </li>
-				<li> <a href="https://github.com/krtdude"> GitHub </a> </li>
-				<li> <a href="http://twitch.tv/krtdude"> Twitch Channel </a> </li>
-				<li> <a href="resume.html"> My Resume </a> </li>
-				<li> <a href="practice.html"> Practice Pages Here </a>
+		<div id="container"> 
+
+			<header>
+
+				<nav>
 
 					<ul>
 
-						<li> <a href="w1.html"> Week 1 </a> </li>
+						<li> <a href="index.html"> Home </a> </li>
+						<li> <a href="https://github.com/krtdude"> GitHub </a> </li>
+						<li> <a href="http://twitch.tv/krtdude"> Twitch Channel </a> </li>
+						<li> <a href="resume.html"> My Resume </a> </li>
+						<li> <a href="practice.html"> Practice Pages Here </a>
+
+							<ul>
+
+								<li> <a href="w1.html"> Week 1 </a> </li>
+
+								<li> <a href="w2.html"> Week 2 </a> </li>
+
+							</ul>
+
+						</li>
 
 					</ul>
 
-				</li>
+				</nav>
 
-		</ul>
+			</header>
 		
 		<h1> Blurg Boop Beep </h1>
 
@@ -76,6 +90,6 @@
 
 		<a href="https://www.reddit.com/r/all/"> Reddit's Front Page </a>
 
-
+		</div>
 	</body>
 </html>
