--- a/w1.html
+++ b/w1.html
@@ -10,6 +10,8 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Mirza" rel="stylesheet">
 
+		<link rel="stylesheet" type="text/css" href="grid.css">
+
 	</head>
 	
 	<body>
